tests/compile_fail/new_source_remove_edge_dir.rs
use grw::modify::*;
use grw::id;

fn main() {
    let _ = N(12) & (!e() >> X(id::N(1)));
}
